# AyMemMapping

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  \
cmake/: Init.cmake  Options.cmake  Utils.cmake
example/file/mman/: universiality.ex.cc
example/file/mmap/: friend.ex.cc  universiality.ex.cc
example/mman/: universiality.ex.cc
example/mmap_file/: friend.ex.cc  universiality.ex.cc
examples/: CMakeLists.txt
examples/file/extra/: buffer.ex.cc  stream.ex.cc
examples/file/mman/: universiality.ex.cc
examples/file/mmap/: allocator.ex.cc  anon_map.ex.cc  buffer.ex.cc  file_map.ex.cc  friend.ex.cc  stream.ex.cc  universiality.ex.cc
include/aymmap/: aymmap.h  aymmap.hpp  config.h  config.hpp  file.h  file.hpp  file_map.hpp  file_utils.hpp  global.h  global.hpp  log.hpp  mem_map.hpp  mman.h  mman.hpp  mmap_file.hpp  mmap_file_buf.hpp
include/aymmap/detail/: endian.hpp  errno.hpp  log.hpp  log_fmt_src_loc.hpp  log_fmt_time.hpp  mman_unix.hpp  mman_unix.tcc  mman_win.hpp  mman_win.ipp  mman_win.tcc  stream.hpp
include/aymmap/file/: buffer.hpp  mman.hpp  mmap.hpp  stream.hpp  utils.hpp
include/aymmap/file/detail/: mman_unix.tcc  mman_win.ipp
main/: main.cc
tests/testlib/include/: testlib.h
tests/ut/global/: global.test.cc
